// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiLoadingContent is rendered 1`] = `
<span
  aria-label="aria-label"
  class="ouiLoadingContent testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`OuiLoadingContent lines 1 is rendered 1`] = `
<span
  class="ouiLoadingContent"
>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`OuiLoadingContent lines 2 is rendered 1`] = `
<span
  class="ouiLoadingContent"
>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`OuiLoadingContent lines 3 is rendered 1`] = `
<span
  class="ouiLoadingContent"
>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`OuiLoadingContent lines 4 is rendered 1`] = `
<span
  class="ouiLoadingContent"
>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`OuiLoadingContent lines 5 is rendered 1`] = `
<span
  class="ouiLoadingContent"
>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`OuiLoadingContent lines 6 is rendered 1`] = `
<span
  class="ouiLoadingContent"
>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`OuiLoadingContent lines 7 is rendered 1`] = `
<span
  class="ouiLoadingContent"
>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`OuiLoadingContent lines 8 is rendered 1`] = `
<span
  class="ouiLoadingContent"
>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`OuiLoadingContent lines 9 is rendered 1`] = `
<span
  class="ouiLoadingContent"
>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`OuiLoadingContent lines 10 is rendered 1`] = `
<span
  class="ouiLoadingContent"
>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="ouiLoadingContent__singleLine"
  >
    <span
      class="ouiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;
